nodejs support added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Data Collection for Nepali Speech Processing Project</title>
   </head>
 
@@ -45,8 +45,11 @@
           Finish
         </button>
       </div>
+      <a class="btn btn-secondary mt-5" href="#" id="downloadButton"
+        >Download</a
+      >
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
