file fetching to the server implemented using websockets, for now the data is stored locally only for development purpose

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,7 @@
           Finish
         </button>
       </div>
+      <p id="fileNameHolder"><%=filename%>.wav</p>
       <a class="btn btn-secondary mt-5" href="#" id="downloadButton"
         >Download</a
       >
