changed to local json fetching for sentences to speak instead of fetching from mongodb

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,10 +20,7 @@
         Data Collection for Nepali Speech Processing Project
       </h4>
       <p class="blockquote-footer mb-4">Sagarmatha Engineering College</p>
-      <h2 class="mb-5">
-        खुशी बाढ्ने चेहेरा खोज्नुस लाखौ भेट्नु हुने छ आशु पुस्ने केवल एक हात
-        खोज्नुस त कतै दुर जाने छ ।
-      </h2>
+      <h2 class="mb-5"><%=sentence%></h2>
       <div id="recordControls">
         <button class="btn btn-success me-2" id="recordButton">Record</button>
         <button class="btn btn-danger me-3" id="stopButton" disabled>
