welcome page added

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+    crossorigin="anonymous"
+  />
     <title>Welcome to data collection for nepal speech processing</title>
   </head>
   <body>
-    Welcome
-    <a href="/collect">Next</a>
+    <div class="jumbotron text-center m-5">
+      <h3>Welcome To Nepali Speech recognition Data Collection</h3><br>
+      <h2>Please select your Gender</h2><br>
+      <div>
+      <form action="/collect" method="post">
+        <input type="radio" name="gender"><span class="p-3 fs-3">Male</span><br>
+        <input type="radio" name="gender"><span class="p-3 fs-3">Female</span><br>
+        <input type="radio" name="gender"><span class="p-3 fs-3">Other</span><br>
+        <input type="submit" value="Submit">
+      </form>
+      </div><br>
+      <a href="/collect" class = "btn btn-primary">Next</a>
+    </div>
   </body>
 </html>
