Email added with submittion error fixed

--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -20,7 +20,7 @@
     </div>
     <h5 class="jumbotron text-center">
       <u>Email us for any suggestion </u><br />
-      <div class="text-primary">mjr@gmail.com</div>
+      <div class="text-primary">mjrproject.sagarmatha@gmail.com</div>
     </h5>
   </body>
 </html>
