--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -58,7 +58,7 @@
         <div class="col">
           <h4>Steps To start recording audio in this site</h4>
           <iframe
-            src="https://www.youtube.com/embed/XldywwZ8Ss4?autoplay=1"
+            src="https://www.youtube.com/embed/XldywwZ8Ss4"
             width="100%"
             height="100%"
             frameborder="0"
